--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
       <img src="images/cartoes.png" alt="Bandeiras dos cartões Visa e Mastercard">
     </footer>
   </div>
-  <!--
+
   <aside id="ticket">
     <img src="images/ticket.png" alt="Cupom de desconto">
   </aside>
-  -->
+  <script type="text/javascript" src="js/bubbles.js"></script>
 </body>
 
 </html>
